manifest/base/bhasai/app/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:

  labels:
    app.kubernetes.io/name: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
    spec:
      containers:
        - image: registry.k8s.bhasai.samagra.io/bharatsahaiyak/kisai-bot:dev
          name: admin
      restartPolicy: Always
