manifest/base/bhasai/app/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app.kubernetes.io/name: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
