manifest/base/bhasai/app/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app 
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - host: "app.k8s.bhasai.samagra.io"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: app
            port:
              number: 80
